Merge branch 'master' into json-auth
Conflicts:
	client/sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/AuthenticationStep.java
	client/sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/Confirmation.java
	client/sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/GetWSAuthenticationServiceFactory.java
	client/sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/WSAuthenticationServiceFactory.java
	client/sdk/safe-online-sdk/src/main/java/net/link/safeonline/sdk/auth/servlet/AbstractConfidentialInjectionServlet.java
	client/sdk/safe-online-sdk/src/main/java/net/link/safeonline/sdk/servlet/AbstractEJBInjectionServlet.java
	client/sdk/safe-online-sdk/src/main/java/net/link/safeonline/sdk/servlet/AbstractInjectionServlet.java
	client/sdk/safe-online-sdk/src/main/java/net/link/safeonline/sdk/ws/AuthenticationErrorCode.java
	pom.xml
	safe-online-auth-ws-impl/src/main/java/net/link/safeonline/auth/ws/GetWSAuthenticationPortImpl.java
	safe-online-auth-ws-impl/src/main/java/net/link/safeonline/auth/ws/WSAuthenticationPortImpl.java
	safe-online-auth-ws-impl/src/main/java/net/link/safeonline/auth/ws/soap/GetWSAuthenticationPortImpl.java
	safe-online-auth-ws-impl/src/main/java/net/link/safeonline/auth/ws/soap/WSAuthenticationPortImpl.java
	safe-online-auth-ws-runtime/pom.xml
	safe-online-openid-webapp/src/main/java/net/link/safeonline/openid/servlet/OpenIDServlet.java
	scripts/mvn-auto
	sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/AuthenticationErrorCode.java
	sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/AuthenticationStep.java
	sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/Confirmation.java
	sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/GetWSAuthenticationServiceFactory.java
	sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/auth/ws/WSAuthenticationServiceFactory.java
	sdk/safe-online-auth-ws/src/main/java/net/link/safeonline/au